# quantization-aware-training

./: .gitignore  README.md  pyproject.toml
notes/: pinned_inputs.md
plans/: plan_v1.md
src/: sitecustomize.py
src/qat/: __init__.py  cli.py  config.py  data.py  export.py  preflight.py  runner.py
src/qat/eval/: core.py  vllm_compat.py  vllm_runner.py
src/qat/quantization/: __init__.py  qat.py
src/qat/train/: __init__.py  baseline.py  qat.py
tests/: test_baseline.py  test_cli.py  test_config.py  test_data.py  test_eval_core.py  test_export.py  test_gpu_integration.py  test_package.py  test_preflight.py  test_qat.py  test_runner.py  test_train_qat.py  test_vllm_compat.py  test_vllm_runner.py
