[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "qat"
version = "0.1.0"
description = "Lightweight quantization-aware training for Qwen3-4B."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressed-tensors",
    "datasets>=4.8.4",
    "safetensors>=0.7.0",
    "sympy>=1.14.0",
    "torch==2.10.0",
    "transformers>=4.56.1,<5",
    "trl>=0.10.1",
    "vllm>=0.19.0 ; python_full_version < '3.14' and sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qat"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "gpu: opt-in GPU integration coverage for real train/export/vLLM paths",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
